fixes card width stretching

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 .card {
   height: 40vh;
-  width: 70vw;
+  width: 30%;
   border: solid lightgrey 1px;
   border-radius: 10px;
   display: flex;
